<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp">

        <LinearLayout
            android:id="@+id/layoutCompanyTieto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/projectNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_tieto_forex"
                android:textColorLink="@color/colorLinkText"
                android:textSize="16.5sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/projectRoleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_tieto_forex_role"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/projectSkillSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:text="@string/project_tieto_forex_skills"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/projectResponsibilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/project_tieto_forex_responsibilities"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>